<resources>
    <string name="app_name">EventPlanner</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="not_registered_message">Don\'t have account yet? </string>
    <string name="register_message">Register now!</string>
    <string name="register">Register</string>
    <string name="password_again">Password again</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="profile_photo">Profile photo</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house_number">House number</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="event_organizer">Event organizer</string>
    <string name="product_service_provider">Product/service provider</string>
    <string name="enter_company_info">Enter company info</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="photos">Photos</string>
    <string name="top_events_text">Top Events In Your Area</string>
    <string name="all_events">All Events In Your Area</string>
    <string name="event_name_search">Event Name</string>
    <string name="search">Search</string>
    <string name="original_price_strikethrough"><strike>$100</strike></string>
    <string name="filter">Filter</string>
    <string name="restart_filter">Restart Filter</string>
    <string name="top_offerings_text">Top Services/Products In Your Area</string>
    <string name="all_offerings">All Services/Products In Your Area</string>
    <string name="offering_name_search">Service/Product Name</string>
    <string name="all_events_tab">All Events</string>
    <string name="all_offerings_tab">All Offerings</string>
    <string name="top_events_tab">Top Events</string>
    <string name="top_offerings_tab">Top Offerings</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="search_event">Search Event By Name</string>
    <string name="search_offering">Search Service/Product By Name</string>
    <string name="your_offerings">Your Services/Products</string>
    <string name="pagination">Page 1 of 10</string>
    <string name="chat">chat</string>
    <string name="your_chatrooms">Your Chatrooms</string>
    <string name="create_service">Create Service</string>
    <string name="service_category">Category</string>
    <string name="specification">Specification</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="add_photo">+ Add photo</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="reservation_deadline">Reservation deadline</string>
    <string name="cancellation_deadline">Cancellation deadline</string>
    <string name="service">SERVICE</string>
    <string name="product">PRODUCT</string>
    <string name="category">CATEGORY</string>
    <string name="your_services">Your Services</string>
    <string name="add_now">Add now!</string>
    <string name="enter_category">Enter your new category</string>
    <string name="enter_length">Choose length of your service</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_max">Enter MAX value</string>
    <string name="enter_min">Enter MIN value</string>
    <string name="available">Available</string>
    <string name="filters">Filters</string>
    <string name="event_type">Event type</string>
    <string name="type">Type</string>
    <string name="your_products_and_services">Your products and services</string>
    <string name="details">Details</string>
    <string name="sort">Sort</string>
    <string name="bridal_hair_and_makeup">Bridal Hair and Makeup</string>
    <string name="expert_makeup">Expert makeup and hair artists provide personalized beauty services to ensure the bride and bridal party look stunning on the big day.</string>
    <string name="category_beauty">Category: Beauty</string>
    <string name="edit_service">Edit Service</string>
    <string name="bridal_specification">Bridal makeup services include a personalized consultation… </string>
    <string name="no_events">No events found.</string>
    <string name="no_offerings">No services/products found.</string>
    <string name="event_type_spinner">Choose Event Type</string>
    <string name="location">Location</string>
    <string name="max_participants">Maximum Participants</string>
    <string name="min_rating">Minimum Rating</string>
    <string name="select_start_end_date">Select a start and end date</string>
    <string name="selected_date_range">Selected: %1$s - %2$s</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="min_discount">Minimum Discount</string>
    <string name="service_duration">Service Duration</string>
    <string name="date">Date</string>
    <string name="agenda">Agenda</string>
    <string name="add_your_review">Add Your Review</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="submit_review">SUBMIT REVIEW</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="notifications">Notifications</string>
    <string name="toggle_notifications">Toggle Push Notifications</string>
    <string name="no_notifications">No notifications</string>
    <string name="number_of_results">Number of results: 10</string>
    <string name="log_out">Log out</string>
    <string name="incorrect_credentials">Incorrect email or password</string>
    <string name="event_types">Event types</string>
    <string name="recommended_categories">Recommended categories</string>
    <string name="filter_offerings">Filter Offerings</string>
    <string name="filter_events">Filter Events</string>
    <string name="restart_event_filter">Restart Filter</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="create_event">Create event</string>
    <string name="no_event_types_apply">No event types apply</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="select_event_type">Select event type</string>
    <string name="open_event_report">Open event report</string>
    <string name="participants_count">Participants count:</string>
    <string name="average_rating">Average rating:</string>
    <string name="participants">Participants</string>
    <string name="people_going">people going</string>
    <string name="attend_event">I Want to Attend</string>
    <string name="category_spinner_text">Choose Category</string>
    <string name="event_type_error">Failed to fetch event types</string>
    <string name="category_error">Failed to fetch categories</string>
    <string name="highest_price_error">Failed to fetch highest price</string>
    <string name="spinner_initialization_error">Failed to initialize spinner</string>
    <string name="create_product">Create product</string>
    <string name="create_new_category">Create new category</string>
    <string name="choose_category">Choose category</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="visible">Visible</string>
    <string name="categories">Categories</string>
    <string name="reserve_a_service">Book A Service</string>
    <string name="choose_event">Choose Event To Book For</string>
    <string name="event_date">Selected event date: </string>
    <string name="reservation">Reservation</string>
    <string name="select_an_event">Select an event</string>
    <string name="end">End Time:</string>
    <string name="not_selected">Not selected</string>
    <string name="select">Select</string>
    <string name="start">Start Time:</string>
    <string name="no_offerings_found">No offerings found</string>
    <string name="personal_info">Personal info</string>
    <string name="company_info">Company info</string>
    <string name="company_photos">Company photos</string>
    <string name="account_details">Account details</string>
    <string name="your_email">Your email:</string>
    <string name="edit_personal_details">Edit Personal Details</string>
    <string name="edit_company_details">Edit Company Details</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="deactivate_account">Deactivate account</string>
    <string name="edit_event">Edit event</string>
    <string name="your_favourite_events">Your Favourite Events</string>
    <string name="your_favourite_offerings">Your Favourite Offerings</string>
    <string name="favourites">Favourites</string>
    <string name="calendar">Calendar</string>
    <string name="service_name">Service Name</string>
    <string name="event_name_2025_07_05">Event Name • 2025-07-05</string>
    <string name="start_10_00">Start: 10:00</string>
    <string name="end_11_00">End: 11:00</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="reservations">Reservations</string>
    <string name="reservation_manager">Reservation Manager</string>
    <string name="add_guest">Add Guest</string>
    <string name="current_guest_list">Current guest list:</string>
    <string name="show_guest_form">Show Guest Form</string>
    <string name="view_guest_list">View Guest List</string>
    <string name="remove_guest">Remove guest</string>
    <string name="guest_example_com">guest@example.com</string>
    <string name="comments">Comments</string>
    <string name="no_comments_to_confirm">No comments to confirm</string>
    <string name="comment_management">Comment Management</string>
    <string name="see_all_events">See All Events</string>
    <string name="see_all_offerings">See All Offerings</string>
    <string name="delete_event">Delete event</string>
    <string name="processing_activation">Processing activation...</string>
    <string name="manage_photos">Manage photos</string>
    <string name="fixed_duration">Fixed duration</string>
    <string name="min_duration">Min duration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pricelist">Pricelist</string>
    <string name="user">User</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="please_describe_the_reason_for_reporting_this_user">Please describe the reason for reporting this user</string>
    <string name="minimum_10_characters_required">Minimum 10 characters required</string>
    <string name="submit_report">Submit Report</string>
    <string name="report_user">Report User</string>
    <string name="reportee_reportee_example_com">Reportee: reportee@example.com</string>
    <string name="reported_by_user_example_com">Reported By: user@example.com</string>
    <string name="this_user_violated_the_event_rules_by">This user violated the event rules by...</string>
    <string name="reports">Reports</string>
    <string name="no_reports_to_confirm">No reports to confirm</string>
    <string name="report_management">Report Management</string>
    <string name="block_user">Block User</string>
    <string name="are_you_sure_you_want_to_block_this_user">Are you sure you want to block this user?</string>
    <string name="are_you_sure_you_want_to_unblock_this_user">Are you sure you want to unblock this user?</string>
</resources>