<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/homeScreenFragment"
                android:title="@string/home"
                android:checkable="true"
                android:icon="@drawable/ic_home"/>
            <item
                android:id="@+id/manageOfferingsFragment"
                android:title="@string/your_offerings"
                android:checkable="true"
                android:icon="@drawable/ic_offering"/>
            <item
                android:id="@+id/createOfferingFragment"
                android:title="Create service"
                android:checkable="true"
                android:icon="@drawable/ic_plus_service"/>
            <item
                android:id="@+id/createProductFragment"
                android:title="@string/create_product"
                android:checkable="true"
                android:icon="@drawable/ic_plus_product"/>
            <item
                android:id="@+id/notificationFragment"
                android:title="@string/notifications"
                android:checkable="true"
                android:icon="@drawable/ic_bell"/>
            <item
                android:id="@+id/chatFragment"
                android:title="@string/your_chatrooms"
                android:checkable="true"
                android:icon="@drawable/ic_chat"/>
            <item
                android:id="@+id/userDetailsFragment"
                android:title="@string/account_details"
                android:checkable="true"
                android:icon="@drawable/ic_profile"/>
            <item
                android:id="@+id/reservationConfirmationFragment"
                android:title="@string/reservation_manager"
                android:checkable="true"
                android:icon="@drawable/ic_bookmark"/>
            <item
                android:id="@+id/favouritesFragment"
                android:title="@string/favourites"
                android:checkable="true"
                android:icon="@drawable/heart_filled"/>
            <item
                android:id="@+id/calendarFragment"
                android:title="@string/calendar"
                android:checkable="true"
                android:icon="@drawable/ic_calendar"/>
        </menu>
    </item>
</menu>