<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/Theme.EventPlanner"
    android:background="@color/white"
    android:padding="5dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/filters"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="italic" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_margin="2dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"/>

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:text="@string/event_type_spinner"
            android:tooltipText="@string/event_type_spinner"
            android:contentDescription="@string/event_type_spinner"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/location">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_type"/>

        <Spinner
            android:id="@+id/event_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:text="@string/event_type_spinner"
            android:tooltipText="@string/event_type_spinner"
            android:contentDescription="@string/event_type_spinner"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service_duration"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"/>
        <com.google.android.material.slider.RangeSlider
            android:id="@+id/price_range_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:values="@array/initial_slider_values"
            android:valueFrom="0.0"
            android:valueTo="1000.0"
            android:stepSize="10.0"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_discount"/>
        <com.google.android.material.slider.Slider
            android:id="@+id/min_discount_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="90"
            android:stepSize="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_rating"/>
        <com.google.android.material.slider.Slider
            android:id="@+id/min_rating_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="1"
            android:valueTo="5"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/selected_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_start_end_date"
            android:visibility="gone"/>

        <Button
            android:id="@+id/date_range_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/select_date_range"
            android:visibility="gone"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:checked="false" />


    </LinearLayout>

</LinearLayout>